fix: rename jurisdiction to state. normalize/map state/territories to 2 letter uppercase abbreviations. ingest updates in exactly the same manner
